# ChangeLog for media-sound/easytag
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/easytag/ChangeLog,v 1.32 2004/07/03 01:44:54 eradicator Exp $

  02 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> easytag-0.31.ebuild:
  Stable x86, amd64, sparc.

  15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> easytag-0.31.ebuild:
  Added ~amd64.

  05 Jun 2004; Aron Griffis <agriffis@gentoo.org> easytag-0.31.ebuild,
  easytag-0.31_pre2-r5.ebuild:
  Minor ebuild syntax cleanups

*easytag-0.31 (02 Jun 2004)

  02 Jun 2004; Seemant Kulleen <seemant@gentoo.org> +easytag-0.31.ebuild,
  -easytag-0.31_pre2-r3.ebuild, -easytag-0.31_pre2-r4.ebuild:
  Version bump to newest upstream release WITH Daniel Drake <dsd@gentoo.org>
  coming in with a brand new gtk2 patch for it, Thanks to him and Tristen for
  testing in bug #52447

*easytag-0.31_pre2-r5 (14 May 2004)

  14 May 2004; Seemant Kulleen <seemant@gentoo.org>
  +easytag-0.31_pre2-r5.ebuild:
  The unrivalled dsd_ (Daniel Drake) <dsd@gentoo.org> has another update to the
  gtk2 patchset. Again, this was tested by Tristan Henderson
  <T.Henderson@cs.ucl.ac.uk>. All this happened in bug #51062

*easytag-0.31_pre2-r4 (04 May 2004)

  04 May 2004; Seemant Kulleen <seemant@gentoo.org> -easytag-0.30c.ebuild,
  -easytag-0.31_pre2-r2.ebuild, +easytag-0.31_pre2-r4.ebuild:
  dsd updated his patch again, verified to compile with gcc2 as well. Thanks to
  Daniel Drake <dsd@gentoo.org> for the patch and Tristan Henderson
  <T.Henderson@cs.ucl.ac.uk> for the gcc2 test, in bug #49968

  29 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  easytag-0.31_pre2-r3.ebuild, files/easytag-0.31_pre2-gcc2.patch:
  Yet another gcc2 fix closing bug #49427.  Thanks again Tristan.

*easytag-0.31_pre2-r3 (27 Apr 2004)

  27 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  easytag-0.31_pre2-r3.ebuild:
  Bumping the version of the gtk2 patch. Provided by Daniel Drake