@@ -1,11 +1,13 @@
-MD5 ac12bbfc3e59087de815cf256b0158d6 ChangeLog 6424
 MD5 59f7db49916260858c6d8155b5cab07c easytag-0.30d.ebuild 1590
+MD5 8184a544c10155b6b7041f72eeef71fc easytag-0.31-r1.ebuild 1298
 MD5 46d6791df1bdb80df8456473f5324c6e easytag-0.31.ebuild 1650
 MD5 9a8e3b48615e2a2df22c80a293d1c842 easytag-0.31_pre2-r5.ebuild 1832
-MD5 3b6186d14b8129457146061f920b7e88 metadata.xml 382
-MD5 0dc3e112a9f2e10861c7608a584f9423 files/digest-easytag-0.30d 349
-MD5 d81b9befdf36f2e2bdc8ef1e26d450cb files/digest-easytag-0.31 138
-MD5 30027265b3c7207c7552c25791996864 files/digest-easytag-0.31_pre2-r5 142
-MD5 a767d8be7a9435927acebb4b1ca9df4c files/easytag-0.30.2-fix-configure.patch 648
-MD5 5630250004c7a1257a3a170ab8bb749f files/easytag-0.30.2-gcc2.patch 11999
+MD5 1c5d3decb7075d923850b6ec53979210 ChangeLog 6607
+MD5 a46cf8baa21f01b073f90295ba23c2e8 metadata.xml 402
 MD5 25444660393147e2d06a5f1378a89ec4 files/easytag-0.31_pre2-gcc2.patch 2763
+MD5 30027265b3c7207c7552c25791996864 files/digest-easytag-0.31_pre2-r5 142
+MD5 0dc3e112a9f2e10861c7608a584f9423 files/digest-easytag-0.30d 349
+MD5 a767d8be7a9435927acebb4b1ca9df4c files/easytag-0.30.2-fix-configure.patch 648
+MD5 d81b9befdf36f2e2bdc8ef1e26d450cb files/digest-easytag-0.31 138
+MD5 bc544930a43c8dd18e9023ceaa679d36 files/digest-easytag-0.31-r1 78
+MD5 5630250004c7a1257a3a170ab8bb749f files/easytag-0.30.2-gcc2.patch 11999
