@@ -3,7 +3,8 @@
 <pkgmetadata>
 <herd>sound</herd>
 <maintainer>
-        <email>dsd@gentoo.org</email>
+	<name>Daniel Drake</name>
+	<email>dsd@gentoo.org</email>
 </maintainer>
 <longdescription>a utility for viewing and editing tags for MP3, MP2, FLAC
 and OGG files. It features a simple and attractive GTK+
